v3.2 (2023-2-10)
- Support scanning directories with multiple file types in Easy Mode
- Redesigned the multithreading mode to increase reliability and effiency
- Progress update in multithreading mode now detects the width of the console and limits it so the output doesn't wrap to a new line on long directory names
- Fix long options
- Fix a segfault that occurs when scanning some corrupt MP3 files
- Windows: Upgrade to FFmpeg 5

v3.1.1 (2022-11-15)
- Fix ID3v2 version parsing bug

v3.1 (2022-11-4)
- Added support for Musepack format
- Added support for HE-AAC, xHE-AAC formats
- Added option '-S' to skip files with existing ReplayGain data
- Easy mode: Added tag mode 'n' which will always skip files regardless of whether or not they have existing ReplayGain tags
- Always fail if a requested command line option or scan preset is invalid
- Build binary packages via GitHub Actions CI
- Added support for BSD operating systems

v3.0.1 (2022-10-13)
- Fixed inconsistencies in tab output formatting

v3.0 (2022-9-14)
- Massive internal rewrite:
    - Source code is now purely C++ instead of mixed C/C++
    - Text formating and output now utilize the fmt library, which is safer and typically faster than C stdio implementations
- Easy Mode multithreaded now generates scan jobs per-directory instead of per-file, which provides an approximately 15-20% performance boost due to reduced thread idling time
- Added progress updates for Easy Mode multithreaded
- Added -m MAX option to use the maximum concurrent threads value provided by the OS
- Fixed a critical bug inherited from loudgain where the program segfaults when trying to delete tags from M4A or WMA files
- Added -t option which allows users to choose between sample peak and true peak for peak calculations. Sample peak now default in both Easy Mode and Custom Mode
- Added -O option in Easy Mode which outputs a .csv spreadsheet scan log in every scanned directory
- Added more statistics to Easy Mode output